Changes for 3.0.3rc1

New features:
A.F....... [ZBX-1357] enabled Chinese (China) translation to be displayed by default (zalex_ua)
A.F....... [ZBX-1357] updated Chinese (China), English (United States), French, Italian, Japanese, Korean, Polish, Portuguese (Brazil), Russian, Slovak, Spanish, Ukrainian translations; thanks to Zabbix translators (zalex_ua)

Bug fixes:
........S. [ZBX-10690] fixed possible buffer overruns in discovery macro substitution and other macro context issues (asaveljevs)
..F....... [ZBX-10640] fixed unexpected reset of group and host filter (Gunars)
..F....... [ZBX-10598] removed redundant closing PHP tags in configuration example file and when generating PHP files (Ivo)
....I..... [ZBX-10741] enforced bash usage in mysql.size user parameter configuration script to avoid issues with different default shells; thanks to Timo Lindfors for reporting it (wiper)
..F....... [ZBX-10722] fixed color picker wrapping (Pavel)
........S. [ZBX-10692] fixed crash when resolving {TRIGGER.NAME} of the trigger with expression containing unknown user macro (gleb)
A......... [ZBX-10607] fixed validation of JSON import source data in configuration.import method (Sasha, Cemeris)
........S. [ZBX-10727] fixed timeout being too low when sending configuration data to active proxy (asaveljevs)
........S. [ZBX-10614] fixed crash during configuration update when context is added to a macro without context (gleb)
.......PS. [ZBX-6563] fixed potential incorrect data from icmppingsec item with low latency hosts (viktors)
..F....... [ZBX-10600] fixed proxy sorting in "Monitored by proxy" dropdown in host edit form (Ivo)
A......... [ZBX-10587] fixed inventory mode not being inherited for host prototypes when linking template to a template/host (Ivo)
........S. [ZBX-10681] fixed loss of trailing whitespace in unquoted function parameters when creating calculated items with low level discovery (wiper)
A......... [ZBX-8924] improved performance of alert.get method (Sasha)